fix(kit): align placeholder

--- a/projects/kit/components/text-area/text-area.style.less
+++ b/projects/kit/components/text-area/text-area.style.less
@@ -230,7 +230,7 @@
     }
 
     :host[data-size='l'] & {
-        top: 1rem;
+        top: 1.12rem;
     }
 
     :host._label-outside & {
